plugins {
	id 'org.springframework.boot' version '2.6.0'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '16'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven {
		url "https://clojars.org/repo/"
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.6'
	implementation 'org.springframework.boot:spring-boot-starter-security:2.5.6'
	implementation 'org.springframework.boot:spring-boot-starter-web:2.5.6'
	implementation 'io.jsonwebtoken:jjwt:0.9.1'
    implementation group: 'org.json', name: 'json', version: '20201115'
	implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.1.1'
    
    compileOnly 'org.projectlombok:lombok:1.18.22'
	runtimeOnly 'mysql:mysql-connector-java:8.0.25'
    //runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok:1.18.22'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.6'
	testImplementation 'org.springframework.security:spring-security-test:5.5.1'
}

test {
	useJUnitPlatform()
}